--- a/templates/zerver/accounts_home.html
+++ b/templates/zerver/accounts_home.html
@@ -79,6 +79,7 @@ $(function () {
                         <div class="login-social">
                             <form class="form-inline" action="{{ url('zerver.views.auth.start_google_oauth2') }}" method="get">
                                 <input type='hidden' name='is_signup' value='1' />
+                                <input type='hidden' name='multiuse_object_key' value='{{ multiuse_object_key }}' />
                                 <button class="login-social-button login-google-button full-width">
                                     {{ _('Sign up with %(identity_provider)s', identity_provider="Google") }}
                                 </button>
@@ -89,6 +90,7 @@ $(function () {
                         {% if github_auth_enabled %}
                         <div class="login-social">
                             <form class="form-inline github-wrapper" action="{{ url('signup-social', args=('github',)) }}" method="get">
+                                <input type='hidden' name='multiuse_object_key' value='{{ multiuse_object_key }}' />
                                 <button class="login-social-button full-width">
                                     {{ _('Sign up with %(identity_provider)s', identity_provider="GitHub") }}
                                 </button>
